# py-poetry-template

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile.dev  README.md  justfile  makefile  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/my_project_name/: main.py
tests/: test_main.py
